tdf#89070 Table filter dialog: properly initialise OTableTreeListBox

regression from .ui conversion:

commit 5c72a213c7c4b588d0c1e0884ff2c46c22425faf
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jan 21 14:41:16 2014 +0000

    convert table filter page to .ui

    Change-Id: I7bfb7698e2a5303b492766fba564c7b9033bcc52

Change-Id: Ic7d41d64d4c15eabf7b7f83a17482c473154434a